--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -30,7 +30,7 @@
       <img src="style/images/braun-timeline.png" />
       <br>
       <p class="contents">
-        Braun's challenge in finding its identity in today's markets is difficult and complicated. This is due in part to Dieter Rams' departure from Braun in 1997, and its individual divisions having been under changing ownership. Despite this, Braun has made encouraging strides under its current design lead, Oliver Grabes, including the revival of its audio category.  And several products remain in their catalog which markedly reflect the timeless aesthetic of classic designs from Dieter Rams and his talented team.      
+        Braun's challenge of finding its identity in today's markets is difficult and complicated. This is due in part to Dieter Rams' departure from Braun in 1997, and its individual divisions having been under changing ownership. Despite this, Braun has made encouraging strides under its current design lead, Oliver Grabes, including the revival of its audio category.  And several products remain in their catalog which markedly reflect the timeless aesthetic of classic designs from Dieter Rams and his talented team.      
       </p>
       <a href="https://www.amazon.co.jp/-/en/M-1010-Electric-Portable-Amazon-co-jp-Exclusive/dp/B09NR6YC6G">
         <img src="style/images/braun-mini.png" style="top: 20px;"/>
@@ -58,7 +58,7 @@
       </a>
       <a class="sub">Braun - BC05W Travel Alarm Clock (2014)</a>
       <p class="contents" style="padding-bottom: 10px;">
-        The BC05W Travel Alarm Clock is a simple, compact analog clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents across the clock face and buttons, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic design element otherwise absent from Braun's product catalog today.
+        The BC05W Travel Alarm Clock is a simple, compact analog clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic design element otherwise absent from Braun's product catalog today.
       <br><br>
         At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs from Dieter Rams, Dietrich Lubs, and others.
       </p>
