Shrink blog title text mobile

--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -49,16 +49,16 @@
       <a class="sub">Braun - BNE001BK Calculator (2013)</a>
       <br>
       <p class="contents">
-        The BNE001BK calculator, a mostly-faithful reissue of the 1987 ET66 calculator, is a straightforward and honest tribute featuring one of Rams' meticulously curated color palettes.  It is mostly faithful to the original.
+        The BNE001BK calculator, a reissue of the 1987 ET66 calculator, is a straightforward and honest tribute featuring one of Rams' meticulously curated color palettes.  It is faithful to the original, functional design of the ET66, even if lacking slightly in build quality compared to its German-manufactured  counterpart.
       <br><br>
-        At the time of writing, it can be purchased exclusively from Amazon Germany in limited capacity from sellers wiling to ship to your country (currently there is a reasonable offering that ships to the USA).  It was only recently discontinued from from Braun's Amazon storefronts in other countries.
+        At the time of writing, it can be purchased exclusively from Amazon Germany (currently there is a reasonable offering that ships to the USA).  It was only recently discontinued from Braun's Amazon storefronts in other countries.
       </p>
       <a href="https://www.amazon.com/BRAUN-BC05W-Travel-Wristwatch-Modern/dp/B0CJFV659Y">
         <img src="style/images/braun-clock.png" style="top: 10px;"/>
       </a>
       <a class="sub">Braun - BC05W Travel Alarm Clock (2014)</a>
       <p class="contents" style="padding-bottom: 10px;">
-        The BC05W Travel Alarm Clock is a simple, compact analog clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic design element otherwise absent from Braun's product catalog today.
+        The BC05W Travel Alarm Clock is a simple, compact analog clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic industrial design element otherwise absent from Braun's product catalog today.
       <br><br>
         At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs from Dieter Rams, Dietrich Lubs, and others.
       </p>
