--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -45,7 +45,7 @@
         At the time of writing, it can be purchased exclusively from Amazon Japan, and can ship outside of Japan to select countries (USA included).
       </p>
       <br><br>
-      <a href="https://www.amazon.de/-/en/Braun-BNE001BK-Calculator-Black/dp/B00DUDU2Q6">
+      <a href="https://www.amazon.co.uk/Braun-BNE001BK-Calculator-Black/dp/B00DUDU2Q6">
         <img src="style/images/braun-calc.png" style="top: 10px;"/>
       </a>
       <a class="sub">Braun - BNE001BK Calculator (2013)</a>
@@ -53,7 +53,7 @@
       <p class="contents">
         The BNE001BK calculator, a reissue of the 1987 ET66 calculator, is a straightforward and honest tribute featuring one of Rams' meticulously curated color palettes.  It is faithful to the original, functional design of the ET66, even if lacking slightly in build quality compared to its German-manufactured  counterpart.
       <br><br>
-        At the time of writing, it can be purchased exclusively from Amazon Germany (currently there is a reasonable offering that ships to the USA).  It was only recently discontinued from Braun's Amazon storefronts in other countries.
+        At the time of writing, it can be purchased from Amazon Germany, France, Italy, and the UK (currently there are reasonable offerings that ship to the USA).  It was only recently discontinued from Braun's Amazon storefronts outside of Europe.
       </p>
       <a href="https://www.amazon.com/BRAUN-BC05W-Travel-Wristwatch-Modern/dp/B0CJFV659Y">
         <img src="style/images/braun-clock.png" style="top: 10px;"/>
