--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -37,12 +37,12 @@
       <a href="https://www.amazon.co.jp/-/en/M-1010-Electric-Portable-Amazon-co-jp-Exclusive/dp/B09NR6YC6G">
         <img src="style/images/braun-mini.png" style="top: 20px;"/>
       </a>
-      <a class="sub">Braun - Pocket Shaver (2021)</a>
+      <a class="sub">Braun - M-1010 Pocket Shaver (2021)</a>
       <br>
       <p class="contents">
-        The latest among them is the Pocket Shaver Mini, exhibiting subtle innovation within their strongest category, while furthering the minimalist aesthetic of familiar products from Braun's past (including a specific throwback with this familiar orangey yellow hue).
+        Perhaps the greatest among them is the Pocket Shaver Mini, exhibiting subtle innovation within their strongest category, while furthering the minimalist aesthetic of familiar products from Braun's past (including a specific throwback with this familiar orangey yellow hue).
       <br><br>
-        At the time of writing, it can be purchased exclusively from Amazon Japan, and can ship outside of Japan to select countries (USA included).
+        At the time of writing, it can be purchased from Amazon Japan, and can ship outside of Japan to select countries (USA included).
       </p>
       <br><br>
       <a href="https://www.amazon.co.uk/Braun-BNE001BK-Calculator-Black/dp/B00DUDU2Q6">
@@ -51,18 +51,18 @@
       <a class="sub">Braun - BNE001BK Calculator (2013)</a>
       <br>
       <p class="contents">
-        The BNE001BK calculator, a reissue of the 1987 ET66 calculator, is a straightforward and honest tribute featuring one of Rams' meticulously curated color palettes.  It is faithful to the original, functional design of the ET66, even if lacking slightly in build quality compared to its German-manufactured  counterpart.
+        The BNE001 calculator, a reissue of the 1987 ET66 calculator, is a straightforward and honest tribute featuring one of Rams' meticulously curated color palettes.  It is faithful to the original, functional design of the ET66, even if lacking slightly in build quality compared to its German-manufactured  counterpart.
       <br><br>
         At the time of writing, it can be purchased from Amazon Germany, France, Italy, and the UK (currently there are reasonable offerings that ship to the USA).  It was only recently discontinued from Braun's Amazon storefronts outside of Europe.
       </p>
       <a href="https://www.amazon.com/BRAUN-BC05W-Travel-Wristwatch-Modern/dp/B0CJFV659Y">
         <img src="style/images/braun-clock.png" style="top: 10px;"/>
       </a>
-      <a class="sub">Braun - BC05W Travel Alarm Clock (2014)</a>
+      <a class="sub">Braun - BC05W Travel Alarm Clock (2023)</a>
       <p class="contents" style="padding-bottom: 10px;">
-        The BC05W Travel Alarm Clock is a simple, compact analog clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic industrial design element otherwise absent from Braun's product catalog today.
+        The BC05 Travel Alarm Clock is a simple, compact analog clock.  It is nearly a reissue of the 1995 AB 314 sl clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic industrial design element otherwise mostly absent from Braun's product catalog today.
       <br><br>
-        At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs from Dieter Rams, Dietrich Lubs, and others.
+        At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs from Dieter Rams, Dietrich Lubs, and others (e.g. the recently released BC25 digital alarm clock features a familiar concentric speaker hole array).
       </p>
     </div>
     <div id="footer">
