--- a/mind-nodes/index.html
+++ b/mind-nodes/index.html
@@ -18,6 +18,8 @@
     />
     <meta name="author" content="Matt Thomas" />
     <meta id="mobileViewport" name="viewport">
+    <link rel="preload" href="style/images/bkmk-w.png" as="image">
+    <link rel="preload" href="style/images/home-w.png" as="image">
     <script>
       var width = .95*window.innerWidth;
       document.getElementById('mobileViewport').setAttribute('content',`width=${width}`);
