--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Matt Thomas" />
     <meta id="mobileViewport" name="viewport">
+    <link rel="preload" href="../style/images/home-w.png" as="image">
     <script>
       var width = .95*window.innerWidth;
       document.getElementById('mobileViewport').setAttribute('content',`width=${width}`);
@@ -62,7 +63,7 @@
       <p class="contents" style="padding-bottom: 10px;">
         The BC05 Travel Alarm Clock is a simple, compact analog clock.  It is nearly a reissue of the 1995 AB 314 sl clock.  What sets it apart from their other stationary clocks, is its inclusion of the vintage red, green, and orange color accents of the buttons and clock face, as well as its slotted speaker holes.  This latter detail, though subtle, is a classic industrial design element otherwise mostly absent from Braun's product catalog today.
       <br><br>
-        At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs from Dieter Rams, Dietrich Lubs, and others (e.g. the recently released BC25 digital alarm clock features a familiar concentric speaker hole array).
+        At the time of writing, it is available from both braun-clocks.com and Amazon USA.  Braun also continues to sell other stationary clocks, wall clocks, and watches, many of which carry forward other classic designs and motifs from Dieter Rams, Dietrich Lubs, and others (e.g. the recently released BC25 digital alarm clock features a familiar concentric speaker hole array).
       </p>
     </div>
     <div id="footer">
