--- a/mind-nodes/minimalism-in-art/index.html
+++ b/mind-nodes/minimalism-in-art/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Matt Thomas" />
     <meta id="mobileViewport" name="viewport">
+    <link rel="preload" href="../style/images/home-w.png" as="image">
     <script>
       var width = .95*window.innerWidth;
       document.getElementById('mobileViewport').setAttribute('content',`width=${width}`);
