--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -41,7 +41,7 @@
       <a class="sub">Braun - M-1010 Pocket Shaver (2021)</a>
       <br>
       <p class="contents">
-        Perhaps the greatest among them is the Pocket Shaver Mini, exhibiting subtle innovation within their strongest category, while furthering the minimalist aesthetic of familiar products from Braun's past (including a specific throwback with this familiar orangey yellow hue).
+        Perhaps the greatest among them is the Pocket Shaver Mini, exhibiting subtle innovation within their strongest category, while furthering the minimalist aesthetic of familiar products from Braun's past (including a specific throwback with this orangey yellow hue).
       <br><br>
         At the time of writing, it can be purchased from Amazon Japan, and can ship outside of Japan to select countries (USA included).
       </p>
